--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .idea/workspace.xml
 .idea/workspace.xml
 .DS_Store
+*.iml
+M9-Challenge-Josephs-Moiya/.idea/modules.xml
+M9-Challenge-Josephs-Moiya/.idea/vcs.xml
+M9-Challenge-Josephs-Moiya/.idea/workspace.xml
